--- a/GUIClient/Properties/Resources.resx
+++ b/GUIClient/Properties/Resources.resx
@@ -117,5 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ServerIP" xml:space="preserve">
+    <value>string</value>
+    <comment>the ip of server.</comment>
+  </data>
+  <data name="ServerPort" xml:space="preserve">
+    <value>int</value>
+    <comment>Server port</comment>
+  </data>
 </root>
